# swarm-memorizer

./: .gitignore  README.md  main.py  pyproject.toml
base_swarm/bots/: _template.py  function_writer.py  perplexity.py
base_swarm/bots/component_crafter/: __init__.py  craft.py
base_swarm/bots/open_interpreter/: loader.py
base_swarm/data/executors/e069156a-b206-4e90-9d1f-011710f1359a/: blueprint.yaml  loader.py
core/: acceptance.py  artifact.py  blueprint.py  bot.py  config.py  delegation.py  description.py  event.py  execution.py  human.py  id_generation.py  loading.py  orchestration.py  query.py  schema.py  swarm.py  task.py  task_data.py
core/toolkit/: caching.py  models.py  script_runner.py  text.py
core_swarm/executors/e069156a-b206-4e90-9d1f-011710f1359a/: blueprint.yaml  loader.py
swarm-memorizer/: __init__.py  swarm.py
swarm_memorizer/: __init__.py  acceptance.py  artifact.py  blueprint.py  bot.py  concept.py  config.py  delegation.py  description.py  event.py  execution.py  human.py  id_generation.py  loading.py  orchestration.py  orchestrator.py  query.py  schema.py  swarm.py  task.py  task_data.py
swarm_memorizer/core_bots/: function_writer.py
swarm_memorizer/core_bots/open_interpreter/: loader.py  run_interpreter.py
swarm_memorizer/toolkit/: advisor.py  caching.py  files.py  hashing.py  models.py  script_runner.py  text.py  yaml_tools.py
swarms/bots/base/: _TEMPLATE.py  core_executor.py  document_reader.py  llm_assistant.py  perplexity.py
swarms/bots/expanded/component_crafter/: craft.py  function_writer.py
swarms/bots/expanded/open_interpreter/: loader.py
swarms/bots/toolkit/: autogen_runner.py  load_markdown.py  messages.py
swarms/bots/unused/open_interpreter/: loader.py  run_interpreter.py
swarms/data/executors/08fbd09d-a63c-4067-bf02-375885317ed1/: loader.py
swarms/data/executors/bb3623a4-b419-4e46-998c-52cab0f7feb5/: loader.py
swarms/data/executors/e069156a-b206-4e90-9d1f-011710f1359a/: blueprint.yaml  loader.py
test/swarm/executors/9b9672d4-5cee-5eef-9ad2-661c0946e351/: blueprint.yaml  loader.py
test/swarm/executors/9b9672d4-5cee-5eef-9ad2-661c0946e352/: blueprint.yaml  loader.py
test/swarm/executors/9b9672d4-5cee-5eef-9ad2-661c0946e353/: loader.py
test/swarm/task_records/: 58fdae33-a57e-588e-ae25-07338916f098.yaml  951b687d-13f3-54c8-aae3-04516d935175.yaml  a4399759-2d18-578f-9803-1427095efaa3.yaml
test/swarms/6bcf7dd4-8e29-58f6-bf5f-7566d4108df5/task_records/: 58fdae33-a57e-588e-ae25-07338916f098.yaml  a4399759-2d18-578f-9803-1427095efaa3.yaml
test/swarms/6bcf7dd4-8e29-58f6-bf5f-7566d4108df6/task_records/: 951b687d-13f3-54c8-aae3-04516d935175.yaml  a4399759-2d18-578f-9803-1427095efaa3.yaml
test/test_package/base_swarm/component_crafter/: test_craft.py
test/test_package/swarms/bots/base/: test_core_executor.py
tests/data/: example_report.md
tests/helpers/: llm_evaluator.py
(+41 files in other folders)
