[tool.poetry]
name = "swarm-memorizer"
version = "0.3.0"
description = ""
authors = ["Mengyang (John) Cha <15233508+solarapparition@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
"ruamel.yaml" = "^0.18.5"
colorama = "^0.4.6"
openai = "^1.6.1"
llama-index = "^0.9.32"
langchain = "^0.1.12"
python-slugify = "^8.0.4"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.5"
langchain-groq = "^0.1.2"
langchain-anthropic = "^0.1.11"
langchain-google-genai = "^1.0.3"

pyautogen = {version = "^0.2.19", optional = true}
open-interpreter = {version = "^0.2.0", optional = true}
pexpect = {version = "^4.9.0", optional = true}

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^23.12.1"
pytest = "^8.1.1"

[tool.poetry.extras]
base-swarm = ["pyautogen", "embedchain"]
expanded-swarm = ["pyautogen", "embedchain", "open-interpreter", "pexpect"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
